@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor #263238
    ArrowColor #263238
}

package "Construction Service" #AliceBlue {
    package "Adapter" as ConstAdapter {
        class SettlementController {
            + createSettlement(SettlementRequest): ResponseEntity<WrapperApiResponse>
        }
    }

    package "UseCase" as ConstUseCase {
        class SettlementUseCase {
            - settlementService: SettlementService
            - installationFormRepository: InstallationFormRepository
            - constructionRequestService: ConstructionRequestService
            + createSettlement(SettlementRequest): SettlementResponse
        }
    }

    package "Application" as ConstApp {
        interface SettlementService {
            + createSettlement(SettlementRequest): SettlementResponse
        }
        
        class SettlementServiceImpl {
            - settlementRepository: SettlementRepository
            - formRepository: InstallationFormRepository
            + createSettlement(SettlementRequest): SettlementResponse
            - mapToResponse(Settlement): SettlementResponse
        }
        
        interface ConstructionRequestService {
            + getByInstallationForm(InstallationForm): ConstructionResponse
        }
    }

    package "Infrastructure" as ConstInfra {
        interface SettlementRepository {
            + save(Settlement): Settlement
        }
        
        interface InstallationFormRepository {
            + findById(InstallationFormId): Optional<InstallationForm>
        }
    }

    package "Domain" as ConstDomain {
        class Settlement {
            - settlementId: String
            - jobContent: String
            - address: String
            - connectionFee: Integer
            - note: String
            - significance: SettlementSignificance
            - installationForm: InstallationForm
        }
        
        class InstallationForm {
            - id: InstallationFormId
            - status: FormProcessingStatus
        }
        
        class ConstructionRequest {
            - id: String
            - isApproved: String
        }
    }
}

package "DTOs" #Ivory {
    class SettlementRequest <<Record>> {
        + formCode: String
        + formNumber: String
        + jobContent: String
        + address: String
        + connectionFee: Integer
        + note: String
        + registrationAt: String
    }
    
    class SettlementResponse <<Record>> {
        + settlementId: String
        + formCode: String
        + formNumber: String
        + significance: SettlementSignificance
    }
}

' Relationships
SettlementController o-- SettlementUseCase
SettlementUseCase o-- SettlementService
SettlementUseCase o-- InstallationFormRepository
SettlementUseCase o-- ConstructionRequestService

SettlementService <|.. SettlementServiceImpl
SettlementServiceImpl o-- SettlementRepository
SettlementServiceImpl o-- InstallationFormRepository

Settlement o-- InstallationForm
SettlementServiceImpl ..> Settlement : creates

SettlementController ..> SettlementRequest : uses
SettlementUseCase ..> SettlementRequest : uses
SettlementServiceImpl ..> SettlementRequest : uses
SettlementUseCase ..> SettlementResponse : returns

@enduml
